# warm-spare-placement

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION PLAN.md  LICENSE  MAPPING_IMPLEMENTATION_PLAN.md  PRD V2 Matrix Builder and Address-Based Drive Time Collection.md  PRD Warm Spare Placement Optimization for Wire Centers.md  Plan Accuracy review.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
archive/: 0. Initial mplementation Plan Feedback.md  IMPLEMENTATION PLAN.md.old.md  IMPLEMENTATION_PLAN.md (Revised).md
config/: default.yaml  single_scenario_test.yaml  v2_base.yaml
config/markets/: atl.yaml  example.yaml  la.yaml  okc.yaml  tulsa.yaml
scripts/: convert_co_drive_time_markets.py
src/warm_spare/: __init__.py  cli.py  config.py  evaluate.py  geocode.py  io.py  mapping.py  matrix_builder.py  models.py  optimize.py  plotting.py  preprocess.py  recommend.py  reporting.py
tests/: __init__.py  test_cli_smoke.py  test_evaluate.py  test_market_config.py  test_matrix_builder.py  test_optimize.py  test_preprocess.py  test_recommend.py  test_support.py  test_validation.py
